test/cpls/errors/call-non-function.cpls
{
  "type": "CALL",
  "operator": {
    "type": "WORD",
    "name": "run",
    "offset": 0,
    "line": 1,
    "column": 1
  },
  "args": [
    {
      "type": "CALL",
      "operator": {
        "type": "WORD",
        "name": "let",
        "offset": 9,
        "line": 2,
        "column": 1
      },
      "args": [
        {
          "type": "WORD",
          "name": "x",
          "offset": 13,
          "line": 2,
          "column": 10
        },
        {
          "type": "VALUE",
          "value": 5,
          "offset": 16,
          "line": 2,
          "column": 12
        }
      ]
    },
    {
      "type": "CALL",
      "operator": {
        "type": "WORD",
        "name": "x",
        "offset": 24,
        "line": 3,
        "column": 1
      },
      "args": []
    }
  ]
}